@@ -2172,6 +2172,47 @@ command to generate the output files.
     </magic>
     <glob pattern="*.sub"/>
   </mime-type>
+  <mime-type type="text/x-iMelody">
+    <_comment>iMelody ringtone</_comment>
+    <magic priority="50">
+      <match type="string" value="BEGIN:IMELODY" offset="0"/>
+    </magic>
+    <glob pattern="*.imy"/>
+    <glob pattern="*.ime"/>
+    <alias type="audio/x-iMelody"/>
+    <alias type="audio/iMelody" />
+  </mime-type>
+  <mime-type type="application/x-smaf">
+    <_comment>SMAF audio</_comment>
+    <acronym>SMAF</acronym>
+    <expanded-acronym>Synthetic music Mobile Application Format</expanded-acronym>
+    <magic priority="50">
+      <match type="string" value="MMMD" offset="0"/>
+    </magic>
+    <glob pattern="*.mmf"/>
+    <glob pattern="*.smaf"/>
+    <alias type="application/vnd.smaf"/>
+  </mime-type>
+  <mime-type type="text/x-mrml">
+    <_comment>MRML playlist</_comment>
+    <magic priority="50">
+      <match type="string" value="&lt;mrml " offset="0"/>
+    </magic>
+    <glob pattern="*.mrml"/>
+    <glob pattern="*.mrl"/>
+  </mime-type>
+  <mime-type type="audio/x-xmf">
+    <_comment>XMF audio</_comment>
+    <acronym>XMF</acronym>
+    <expanded-acronym>eXtensible Music Format</expanded-acronym>
+    <magic priority="50">
+      <match type="string" value="XMF_" offset="0"/>
+      <match type="string" value="\130\115\106\137\062\056\060\060\000\000\000\002" offset="0"/>
+    </magic>
+    <glob pattern="*.xmf"/>
+    <alias type="audio/xmf"/>
+    <alias type="audio/mobile-xmf"/>
+  </mime-type>
   <mime-type type="application/x-sv4cpio">
     <_comment>SV4 CPIO archive</_comment>
     <glob pattern="*.sv4cpio"/>
