@@ -1,0 +1,5 @@
+BEGIN:IMELODY
+VERSION:1.2
+FORMAT:CLASS1.0
+MELODY:*3c2c3*3a3*3g3*3e3*3g2.*3d2.*3c2c3*3a3*3g3*3e3*3g1.r2
+END:IMELODY
